--- a/app/src/main/res/layout/activity_album_content.xml
+++ b/app/src/main/res/layout/activity_album_content.xml
@@ -59,7 +59,6 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="8dp"
-                    android:text="album title"
                     android:textStyle="bold"
                     android:textColor="?attr/primaryText"
                     android:textSize="17sp"
@@ -72,7 +71,6 @@
                     android:id="@+id/album_artist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="artist"
                     android:textColor="?attr/secondaryText"
                     android:textSize="15sp"
                     app:layout_constraintLeft_toLeftOf="@+id/album_title"
@@ -88,7 +86,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="7dp"
-                    android:text="play"
+                    android:text="Play"
                     android:background="@drawable/button_background_select_radius"
                     android:onClick="play"
                     android:textColor="?attr/primaryText"
@@ -116,8 +114,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintBaseline_toBaselineOf="@+id/album_play_button"
                     app:layout_constraintLeft_toRightOf="@+id/album_play_button"
-                    app:layout_constraintRight_toRightOf="parent"
-                    />
+                    app:layout_constraintRight_toRightOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -134,8 +131,7 @@
                 android:overScrollMode="never"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintBottom_toBottomOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
         <include layout="@layout/content_player"/>
