--- a/app/src/main/res/layout/activity_albums_track_list.xml
+++ b/app/src/main/res/layout/activity_albums_track_list.xml
@@ -10,10 +10,8 @@
         android:id="@+id/albums_track_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
         android:paddingTop="24dp"
-        android:theme="@style/White.AppBarOverlay"
-        app:elevation="0dp">
+        android:theme="@style/White.AppBarOverlay">
 
         <FrameLayout
             android:layout_width="match_parent"
