--- a/app/src/main/res/layout/item_browse_horizontal_list.xml
+++ b/app/src/main/res/layout/item_browse_horizontal_list.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
-            android:text="New Release"
+            android:text="New Releases"
             android:textColor="?attr/primaryText"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
