--- a/app/src/main/res/menu/browse_fragment_menu.xml
+++ b/app/src/main/res/menu/browse_fragment_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/setting"
-        android:title="Setting"
+        android:title="Settings"
         android:icon="@drawable/ic_settings"
         app:showAsAction="always" />
 </menu>
