--- a/app/src/main/res/layout/activity_album_content.xml
+++ b/app/src/main/res/layout/activity_album_content.xml
@@ -11,7 +11,6 @@
     tools:context="cloud.veezee.android.activities.AlbumActivity"
     tools:showIn="@layout/activity_album">
 
-
     <com.sothree.slidinguppanel.SlidingUpPanelLayout
         xmlns:sothree="http://schemas.android.com/apk/res-auto"
         android:id="@+id/sliding_layout"
@@ -118,6 +117,20 @@
 
             </android.support.constraint.ConstraintLayout>
 
+            <ProgressBar
+                android:id="@+id/loading"
+                android:layout_width="31dp"
+                android:layout_height="31dp"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/album_info_container"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="16dp" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/album_list"
                 android:layout_width="0dp"
@@ -132,6 +145,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
+
         </android.support.constraint.ConstraintLayout>
 
         <include layout="@layout/content_player"/>
