--- a/app/src/main/res/layout/item_recently_played.xml
+++ b/app/src/main/res/layout/item_recently_played.xml
@@ -1,56 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/album_item_container"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/track_album_art"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:scaleType="centerCrop"
+        android:outlineProvider="background"
+        android:background="@drawable/image_border_radius"
+        android:src="@drawable/placeholder" />
+
+    <TextView
+        android:id="@+id/track_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardElevation="0dp">
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="@dimen/title"
+        android:textColor="?attr/primaryText" />
 
-        <LinearLayout
-            android:id="@+id/album_item_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="5dp">
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:id="@+id/album_item_container"-->
+        <!--android:layout_width="150dp"-->
+        <!--android:layout_height="150dp"-->
+        <!--app:cardCornerRadius="10dp"-->
+        <!--app:cardElevation="0dp">-->
 
-            <ImageView
-                android:id="@+id/album_item_cover"
-                android:layout_width="125dp"
-                android:layout_height="125dp"
-                android:scaleType="centerCrop"
-                android:background="@drawable/image_border_radius"
-                android:src="@drawable/placeholder" />
+        <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
+            <!--&lt;!&ndash;android:id="@+id/album_item_layout"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:orientation="vertical"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:padding="5dp">&ndash;&gt;-->
 
-            <TextView
-                android:id="@+id/album_item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_marginTop="3dp"
-                android:text="album"
-                android:textAlignment="center"
-                android:textSize="@dimen/title"
-                android:textColor="?attr/primaryText" />
+            <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
+                <!--&lt;!&ndash;android:id="@+id/album_item_cover"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="125dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="125dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:scaleType="centerCrop"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:outlineProvider="background"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:background="@drawable/image_border_radius"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:src="@drawable/placeholder" />&ndash;&gt;-->
 
-            <TextView
-                android:id="@+id/album_item_artist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="artist"
-                android:textColor="?attr/secondaryText"
-                android:textSize="@dimen/artist_name"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:visibility="gone"/>
+            <!--<TextView-->
+                <!--android:id="@+id/album_item_title"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:maxLines="1"-->
+                <!--android:ellipsize="end"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:text="album"-->
+                <!--android:gravity="center"-->
+                <!--android:textAlignment="center"-->
+                <!--android:textSize="@dimen/title"-->
+                <!--android:textColor="?attr/primaryText" />-->
 
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+        <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
+    <!--</android.support.v7.widget.CardView>-->
+</LinearLayout>
