Important bug fixes and changes to the API layer

--- a/app/src/main/res/layout/dialog_update_name_password.xml
+++ b/app/src/main/res/layout/dialog_update_name_password.xml
@@ -9,23 +9,46 @@
         android:id="@+id/create_playlist_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Playlist"
+        android:text="Change name and password"
         android:textStyle="bold"
         android:textSize="@dimen/title"
         android:textColor="@color/black"/>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/title_text_input_layout"
+        android:id="@+id/name_text_input_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Title"
+        android:hint="New name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_playlist_header">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/title_edit_text"
+            android:id="@+id/name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:textColor="@color/black"
+            style="@style/dialogEditText"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/password_text_input_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="New password (Optional)"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name_text_input_layout">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/password_edit_text"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -44,7 +67,7 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text_input_layout">
+        app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout">
 
         <Button
             android:id="@+id/submit_button"
