--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -40,7 +40,7 @@
             android:textSize="19sp" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/changeNameAndPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
