--- a/app/src/main/res/layout/item_recently_played.xml
+++ b/app/src/main/res/layout/item_recently_played.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -29,42 +31,4 @@
         android:textSize="@dimen/title"
         android:textColor="?attr/primaryText" />
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/album_item_container"-->
-        <!--android:layout_width="150dp"-->
-        <!--android:layout_height="150dp"-->
-        <!--app:cardCornerRadius="10dp"-->
-        <!--app:cardElevation="0dp">-->
-
-        <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
-            <!--&lt;!&ndash;android:id="@+id/album_item_layout"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:orientation="vertical"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:padding="5dp">&ndash;&gt;-->
-
-            <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
-                <!--&lt;!&ndash;android:id="@+id/album_item_cover"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_width="125dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_height="125dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:scaleType="centerCrop"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:outlineProvider="background"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:background="@drawable/image_border_radius"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:src="@drawable/placeholder" />&ndash;&gt;-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/album_item_title"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:maxLines="1"-->
-                <!--android:ellipsize="end"-->
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:text="album"-->
-                <!--android:gravity="center"-->
-                <!--android:textAlignment="center"-->
-                <!--android:textSize="@dimen/title"-->
-                <!--android:textColor="?attr/primaryText" />-->
-
-        <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
-    <!--</android.support.v7.widget.CardView>-->
 </LinearLayout>
