Added run-time guest mode support and crash fixes

--- a/app/src/main/res/menu/browse_fragment_menu.xml
+++ b/app/src/main/res/menu/browse_fragment_menu.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/login"
+        android:title="Log In"
+        android:icon="@drawable/ic_person_24dp"
+        app:showAsAction="always"
+        android:visible="false" />
+
+    <item
         android:id="@+id/setting"
         android:title="Settings"
         android:icon="@drawable/ic_settings"
         app:showAsAction="always" />
+
 </menu>
