--- a/app/src/main/res/layout/activity_login_content.xml
+++ b/app/src/main/res/layout/activity_login_content.xml
@@ -99,6 +99,18 @@
             android:onClick="buttons"
             android:text="@string/register" />
 
+        <TextView
+            android:id="@+id/guest_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@drawable/white_textview_to_gray_bg_selector"
+            android:layout_marginTop="10dp"
+            android:textSize="17sp"
+            android:layout_gravity="center_horizontal"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="@string/guest_login"/>
+
     </LinearLayout>
 
     <ImageView
