--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:actionMenuTextColor">?attr/primaryText</item>
         <!--<item name="android:windowTranslucentNavigation">true</item>-->
         <!--<item name="android:navigationBarColor">@color/black_accent</item>-->
         <!--<item name="windowActionBarOverlay">true</item>-->
